--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "typescript": "^4.9.5"
   },
   "scripts": {
-    "start": "react-scripts start"
+    "start": "react-scripts start",
+    "build": "react-scripts build"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
